# pm_gw

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  pm_gw_master_build_prompt.md  pm_gw_techstack.md
dashboard/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AlertRail.tsx  AppShell.tsx  DepthChart.tsx  FeedMatrix.tsx  HealthStrip.tsx  PriceComparisonChart.tsx  StreamingPanel.tsx  UpstreamSummaryPanel.tsx
dashboard/src/lib/: api.ts  types.ts  utils.ts
dashboard/src/pages/: AdminPage.tsx  AlertsPage.tsx  (+5 more)
deploy/: Caddyfile.example  Caddyfile.live  docker-compose.dashboard.yml  install-systemd.sh  polymarket-gateway.service  restart-systemd.sh
scripts/: run-local.sh
src/: auth.rs  broadcast.rs  commands.rs  config.rs  dashboard.rs  error.rs  health.rs  main.rs  market_scheduler.rs  observability.rs  responses.rs  session.rs  state.rs  trade_api.rs  types.rs  ws_server.rs
src/execution/: polymarket.rs
src/feeds/: binance.rs  bitstamp.rs  coinbase.rs  kraken.rs  mod.rs  okx.rs  polymarket_clob_market.rs  polymarket_clob_user.rs  polymarket_gamma.rs  polymarket_rtds.rs
src/models/: account.rs  market.rs  mod.rs  normalized.rs  order.rs
src/util/: logging.rs  mod.rs  retry.rs
trade_app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
trade_app/public/: manifest.webmanifest  sw.js
trade_app/src/: App.tsx  index.css  main.tsx
(+12 files in other folders)
