[package]
name = "polymarket_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws", "http1", "json", "tokio"] }
base64 = "0.22"
dotenvy = "0.15"
ethers-core = "2.0"
ethers-signers = "2.0"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
